# Running-Standard-Block-Ciphers-with-TFHE

./: README.md  README.txt
clefia/: CMakeLists.txt  README.md
clefia/sources/: CMakeLists.txt  annexe.h  bootstrapping.cpp~  bootstrapping.h  clefia.cpp  clefia.h  clefia.h~  key_schedule.cpp  key_schedule.h  main.cpp  main.cpp~  pari.txt  tables.cpp  tables.cpp~  tables.h  tables.h~
prince/: README.md
prince/sources/: CMakeLists.txt  annexe.cpp  annexe.cpp~  annexe.h~  bootstrapping.cpp~  bootstrapping.h  bootstrapping.h~  main.cpp  main.cpp~  prince.cpp  prince.cpp~  prince_ref.h  prince_ref.h~  tables.cpp  tables.cpp~  tables.h  tables.h~  tlwekeyswitch.h
simon/: CMakeLists.txt  README.md
simon/sources/: CMakeLists.txt  bootstrapping.cpp  bootstrapping.cpp~  bootstrapping.h  clefia.cpp~  key_schedule.cpp~  key_schedule.h~  main.cpp  main.cpp~  simon.cpp  simon.cpp~  simon.h  simon.h~  tables.cpp  tables.cpp~  tables.h  tables.h~
